[package]
name = "broadcast-context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
tokio = { version = "1.3.0", features = ["full"] }
futures = "*"
anyhow = "1.0.41"
interceptor = "0.2.3"
rtcp = "0.4.1"
webrtc = "0.1"
webrtc-util = "0.5.0"
chrono = "0.4"
serde_json = "^1.0"
base64 = "0.13.0"
env_logger = "0.9.0"
